# AgentML

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  README.md  correlation_output.txt  docker-compose.yml  eda_output.txt  pyproject.toml  pytest.ini  requirements-opencode.txt
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: automl-coordinator.md  data-processor.md  explainability.md  feature-engineer.md  model-selector.md  model-validator.md  viz-agent.md
.opencode/skills/data-cleaning/: SKILL.md
.opencode/skills/data-visualization/: SKILL.md
.opencode/skills/eda/: SKILL.md
.opencode/skills/feature-engineering/: SKILL.md
.opencode/skills/geospatial-analysis/: SKILL.md
.opencode/skills/model-training/: SKILL.md
.opencode/skills/model-validation/: SKILL.md
.opencode/skills/shap-analysis/: SKILL.md
adapter/: __init__.py  agent_wrapper.py
core/prompt_agent/WizardLAMP/seeds/: CV.csv  Graph.csv  Multimodal.csv  NLP.csv  RecSys.csv  Tabular.csv
mcp_servers/python_executor/: server.py
tests/: X_sample.csv  X_test.csv  __init__.py  shap_values.npy  test_adapter.py  test_config.py  test_integration.py  上海分析.csv
tests/analysis_result/: eda_report.html
